css-compiled/theme.css
h1 {
  font-size: 2.5rem;
  line-height: 3.75rem;
  margin: 2.5rem 0 0 0; }

h2 {
  font-size: 2.5rem;
  line-height: 3.75rem;
  margin: 2.5rem 0 0 0; }

h3 {
  font-size: 2rem;
  line-height: 3rem;
  margin: 2rem 0 0 0; }

h4 {
  font-size: 1.75rem;
  line-height: 2.63rem;
  margin: 1.75rem 0 0 0; }

h5 {
  font-size: 1.5rem;
  line-height: 2.25rem;
  margin: 1.5rem 0 0 0; }

h6 {
  font-size: 1.25rem;
  line-height: 1.88rem;
  margin: 1.25rem 0 0 0; }

h1 + p, h2 + p, h3 + p, h4 + p, h5 + p, h6 + p {
  margin-top: 0; }

h1 + ul, h2 + ul, h3 + ul, h4 + ul, h5 + ul, h6 + ul {
  margin-top: 0; }

h1 + ol, h2 + ol, h3 + ol, h4 + ol, h5 + ol, h6 + ol {
  margin-top: 0; }

p, ul, ol, pre, code {
  margin-bottom: 0; }

ul {
  margin-left: 1.5rem; }

a {
  color: #FF5722; }
  a:hover {
    color: #03A9F4; }

a.btn {
  vertical-align: middle; }
  a.btn:hover {
    color: black; }

.tags a {
  display: inline-block;
  padding: 0;
  margin-bottom: .2rem; }
  .tags a :hover {
    color: black; }

.logo {
  margin-top: 6px;
  height: 52px;
  width: 52px; }
  .logo path {
    fill: white; }

nav {
  background-color: #0288D1; }

.nav-wrapper a:hover {
  color: black; }
.nav-wrapper a i {
  position: relative;
  font-size: 1.3rem;
  right: -0.05em; }
.nav-wrapper a span {
  position: relative;
  top: -0.15em; }

a.button-collapse i.mdi.mdi-menu {
  font-size: 2.5em; }

nav .nav-wrapper .mdi {
  display: inline-block; }

li.disabled {
  color: rgba(50, 50, 50, 0.2); }

.tags a {
  display: inline-block;
  padding: 0;
  margin-bottom: .2rem; }
  .tags a :hover {
    color: black; }

span.tags {
  float: right; }
span .badge {
  float: none;
  position: relative;
  right: 0;
  padding: 4px 6px 4px 6px; }

span.badge.new::after {
  content: ""; }

.footer-copyright .container a {
  font-weight: 500; }
  .footer-copyright .container a:hover {
    color: white; }

.header {
  background-color: #03A9F4;
  text-align: center; }
  .header h1 {
    margin-top: 0;
    margin-bottom: 0;
    text-align: center;
    font-size: 4rem;
    padding-top: 3rem;
    color: #FFFFFF; }
  .header h2 {
    margin-top: 0;
    margin-bottom: 0;
    text-align: center;
    font-size: 2rem;
    padding-bottom: 2rem;
    color: #FFFFFF; }

.breadcrumbs {
  margin-top: 1.5rem; }
  .breadcrumbs a {
    vertical-align: top; }

.btn {
  padding-top: 0.1rem;
  background-color: #03A9F4;
  margin-bottom: 1rem; }
  .btn:hover {
    background-color: #B3E5FC; }

.btn span {
  position: relative;
  top: -0.1rem; }

span.badge.new {
  background-color: #03A9F4; }

.list-blog-header {
  position: relative; }
  .list-blog-header h4 {
    margin-bottom: 0.5rem; }
  .list-blog-header img {
    display: block;
    margin-top: 1rem;
    border-radius: 0.25rem;
    clear: both; }

.pagination {
  text-align: center;
  display: inline-block; }
  .pagination li.active {
    background-color: #FF5722; }

.previous {
  float: right; }

.modular .features, .modular .callout {
  margin-top: 3rem; }
  .modular .features h2, .modular .callout h2 {
    margin-bottom: 0;
    font-weight: 500;
    font-size: 1.75rem;
    line-height: 2rem; }
  .modular .features h3, .modular .callout h3 {
    margin-top: 0;
    font-size: 1.5rem;
    line-height: 1.75rem; }
  .modular .features h4, .modular .callout h4 {
    font-size: 1.5rem; }

.modular .callout h2 {
  margin-top: 0.5em; }

.modular .features .feature {
  vertical-align: top; }

.features.big .feature-content {
  padding-right: 2rem; }
  .features.big .feature-content.push {
    margin-left: 4rem; }

.features.big .feature {
  margin: 2rem 0; }
  .features.big .feature h4 {
    text-align: left;
    margin: 0; }
  .features.big .feature i {
    float: left;
    font-size: 3rem;
    color: #FF5722; }

.features.small .feature {
  margin-top: 2rem; }
  .features.small .feature h4 {
    font-size: 1.125rem; }
  .features.small .feature i {
    font-size: 3rem;
    color: #FF5722; }

.features.small .feature-content h4 {
  margin-top: 0; }

.feature-content p {
  text-align: left;
  margin: 0; }

.callout {
  background: #F0F0F0;
  padding: 2rem 2rem; }
  .callout .align-right {
    float: right;
    margin-left: 1rem; }

footer.page-footer {
  background-color: #03A9F4; }

.centered {
  display: block;
  margin: 0 auto; }

@media only screen and (min-width: 993px) {
  .container {
    width: 90%; } }

.collapsible-header {
  height: auto; }
  .collapsible-header h1, .collapsible-header h2, .collapsible-header h3, .collapsible-header h4, .collapsible-header h5, .collapsible-header h6 {
    display: table-cell;
    vertical-align: top;
    margin: 0;
    padding-top: 0.5em;
    padding-bottom: 0.5em; }
  .collapsible-header i {
    width: auto;
    line-height: inherit;
    font-size: inherit;
    margin-right: 0.5em; }

.collapsible-body h1, .collapsible-body h2, .collapsible-body h3, .collapsible-body h4, .collapsible-body h5, .collapsible-body h5, .collapsible-body h6 {
  padding-left: 2rem; }
.collapsible-body iframe, .collapsible-body img {
  padding-left: 2rem; }
.collapsible-body p:first-child {
  padding-top: 1.5em; }
.collapsible-body p:last-child {
  padding-bottom: 1.5em; }
.collapsible-body p {
  padding: 0 2rem 1em 2em; }
.collapsible-body ul:first-child {
  padding-top: 1.5em; }
.collapsible-body ul:last-child {
  padding-bottom: 1.5em; }
.collapsible-body ul, .collapsible-body ol {
  padding: 0 2rem 1em 2em; }
/*# sourceMappingURL=theme.css.map */

